// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard should format large values 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        10,000,000,000
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          +
          30%
          <div
            className="c8 c9 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        1
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          +
          30%
          <div
            className="c8 c9 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render green 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c4 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 c4"
      >
        1
      </span>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <span
          className="c4"
        >
          +
          30%
          <div
            className="c8 c9 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render negative growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: red;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        1
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          
          -30%
          <div
            className="c8 c9 lni lni-chevron-down"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render positive growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        1
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          +
          30%
          <div
            className="c8 c9 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render red 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c6 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c10 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c4 {
  color: red;
}

.c8 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 c4"
      >
        1
      </span>
    </div>
    <span
      className="c5 c6"
    >
      <span
        className="c7"
      >
        <span
          className="c8"
        >
          +
          30%
          <div
            className="c9 c10 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render two decimal points in growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: green;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        1
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          +
          33.33%
          <div
            className="c8 c9 lni lni-chevron-up"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c5 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c9 {
  font-size: 4rem;
  text-align: center;
}

.c0 {
  padding: 1.2em;
  font-family: Helvetica;
  font-size: 0.9rem;
}

.c7 {
  color: #1ea7fd;
}

.c3 {
  font-size: 2.2rem;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3 "
      >
        1
      </span>
    </div>
    <span
      className="c4 c5"
    >
      <span
        className="c6"
      >
        <span
          className="c7"
        >
          
          0%
          <div
            className="c8 c9 lni lni-minus"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;
